name:                frp-snake-game
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gloss.FRP.Reactive.Banana
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , reactive-banana
  default-language:    Haskell2010

executable reactive-banana-exe
  hs-source-dirs:      reactive-banana
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , mwc-random
                     , reactive-banana
                     , gloss
                     , frp-snake-game
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/frp-practice
